Vector/test/init/listInitGenericError.good
$CHPL_HOME/modules/standard/ListNG.chpl:nnnn: In initializer:
$CHPL_HOME/modules/standard/ListNG.chpl:nnnn: warning: creating a listng with element type C
$CHPL_HOME/modules/standard/ListNG.chpl:nnnn: warning: which now means class type with generic management
$CHPL_HOME/modules/standard/ListNG.chpl:nnnn: error: listng element type cannot currently be generic
listInitGenericError.chpl:7: Initializer instantiated as: init(type eltType = C, param parSafe = 0)
