Vector/test/init/listInitGenericError.chpl
use ListNG;

class C {
  var x = 10;
}

var l = new listng(C);  // C has generic management
writeln(l);
